# trusteval

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  report.html  results.json  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security-scan.yml
cli/: main.py
dashboard/: __init__.py
dashboard/backend/: main.py
dashboard/backend/middleware/: auth.py  cors.py  logging.py  rate_limit.py
dashboard/backend/models/: database.py  schemas.py
dashboard/backend/routers/: evaluations.py  health.py  industries.py  providers.py  reports.py
dashboard/backend/services/: evaluation_service.py  report_service.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/src/: App.jsx  index.css
dashboard/frontend/src/components/charts/: HeatMap.jsx  RadarChart.jsx  TrendChart.jsx
dashboard/frontend/src/components/common/: Badge.jsx  DataTable.jsx  LoadingSpinner.jsx  MetricCard.jsx  ScoreGauge.jsx  Toast.jsx
dashboard/frontend/src/components/evaluation/: EvalResults.jsx  EvalWizard.jsx  IndustrySelector.jsx  PillarBreakdown.jsx
dashboard/frontend/src/components/layout/: Layout.jsx  Sidebar.jsx  TopBar.jsx
dashboard/frontend/src/pages/: Dashboard.jsx  EvaluationDetail.jsx  ModelComparison.jsx  NewEvaluation.jsx  NotFound.jsx  Reports.jsx  Settings.jsx
docs/: cli-reference.md  index.md  quickstart.md  sdk-reference.md  security.md
docs/industries/: bfsi.md  healthcare.md  legal.md  retail.md
docs/pillars/: bias.md  hallucination.md  pii.md  toxicity.md
scripts/: build_docs.sh  dev_server.sh  publish_pypi.sh
tests/: conftest.py
tests/fixtures/: mock_eval_results.json  sample_responses.json
tests/integration/: test_full_pipeline.py  test_healthcare_benchmark.py  test_openai_provider.py
tests/unit/: test_bias_detector.py  test_evaluator.py  test_hallucination_detector.py  test_pii_detector.py  test_scorer.py  test_security.py  test_toxicity_detector.py
trusteval/: __init__.py  version.py
trusteval/core/: __init__.py  benchmark.py  evaluator.py  pipeline.py  result.py  scorer.py
trusteval/industries/: __init__.py  base_industry.py
trusteval/industries/bfsi/: __init__.py  benchmarks.py  compliance.py  datasets.py
trusteval/industries/healthcare/: __init__.py  benchmarks.py  compliance.py  datasets.py
trusteval/industries/legal/: __init__.py  benchmarks.py  compliance.py  datasets.py
trusteval/industries/retail/: __init__.py  benchmarks.py  compliance.py  datasets.py
trusteval/pillars/: __init__.py
trusteval/pillars/bias/: __init__.py  detector.py  metrics.py  test_cases.py
trusteval/pillars/hallucination/: __init__.py  detector.py  metrics.py  test_cases.py
trusteval/pillars/pii/: __init__.py  detector.py  patterns.py  test_cases.py
trusteval/pillars/toxicity/: __init__.py  detector.py  metrics.py  test_cases.py
trusteval/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  huggingface_provider.py  openai_provider.py  provider_factory.py
trusteval/reporters/: __init__.py  base_reporter.py  csv_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py
trusteval/security/: __init__.py  audit_logger.py  encryption.py  input_sanitizer.py  key_manager.py  rate_limiter.py
trusteval/utils/: __init__.py  config.py  exceptions.py  logger.py  validators.py
