[metadata]
name = trusteval
version = attr: trusteval.version.__version__
author = Antrixsh Gupta
author_email = antrixsh@example.com
description = Enterprise LLM Evaluation & Responsible AI Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antrixsh/trusteval
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10
packages = find:

[tool:pytest]
testpaths = tests

[ruff]
line-length = 100
target-version = py310
